unpackaged/main/default/objects/Account_Team__mdt/Account_Team__mdt.object-meta.xml
<CustomObject>
    <label>Account Team</label>
    <pluralLabel>Account Teams</pluralLabel>
</CustomObject>