unpackaged/main/default/objects/Account_Team__mdt/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <label>Account Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>