unpackaged/main/default/objects/Account_Team__mdt/fields/Business_Support_Manager__c.field-meta.xml
<CustomField>
    <fullName>Business_Support_Manager__c</fullName>
    <label>Business Support Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>