unpackaged/main/default/objects/Account_Team__mdt/fields/CSM_I__c.field-meta.xml
<CustomField>
    <fullName>CSM_I__c</fullName>
    <label>CSM I</label>
    <length>100</length>
    <type>Text</type>
</CustomField>