unpackaged/main/default/objects/Account_Team__mdt/fields/CSM_II__c.field-meta.xml
<CustomField>
    <fullName>CSM_II__c</fullName>
    <label>CSM II</label>
    <length>100</length>
    <type>Text</type>
</CustomField>